--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "start": "^5.1.0",
     "web-vitals": "^2.1.4"
   },
