--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,8 +1,8 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=mongodb+srv://prathamhanda10:hostelnet@roomsonrent.ic0mj.mongodb.net/
+MONGO_URI=mongodb+srv://prathamhanda10:hostelnet@roomsonrent.ic0mj.mongodb.net/roomsonrent?retryWrites=true&w=majority&ssl=true
 
-JWT_SECRET=roomsonrent_secret_key_123456
+JWT_SECRET=your-jwt-secret-key-here
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
