--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,11 @@
 {
   "name": "roomsonrent-backend",
   "version": "1.0.0",
-  "description": "Backend API for RoomsOnRent application",
+  "description": "Backend for RoomsOnRent",
   "main": "server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=development node server.js",
-    "dev": "cross-env NODE_ENV=development nodemon server.js",
-    "prod": "cross-env NODE_ENV=production node server.js",
-    "data:import": "node seeder -i",
-    "data:destroy": "node seeder -d"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "rooms",
@@ -19,21 +16,22 @@
   "author": "RoomsOnRent Team",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.10.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.1",
-    "slugify": "^1.6.6"
+    "nodemailer": "^6.10.0",
+    "slugify": "^1.6.6",
+    "twilio": "^5.5.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.0.3"
   }
 }
