--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^4.12.0",
     "react-leaflet": "^4.2.1",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
