--- a/frontend_main/package.json
+++ b/frontend_main/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.14"
   },
