--- a/frontend_main/package.json
+++ b/frontend_main/package.json
@@ -13,6 +13,7 @@
     "@heroui/button": "^2.2.16",
     "@heroui/card": "^2.2.15",
     "@heroui/input": "^2.4.16",
+    "@heroui/react": "^2.7.5",
     "@heroui/system": "^2.4.12",
     "@heroui/theme": "^2.4.12",
     "@radix-ui/react-slot": "^1.1.2",
@@ -31,7 +32,9 @@
     "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.3.0",
+    "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
     "tailwindcss-animate": "^1.0.7"
